# replmux

./: .gitignore  AGENTS.md  README.md  SKILL.md  jupyter_repl.py  minimal_kernel_clean.py  pyproject.toml
.github/workflows/: release.yml
.tickets/: mul-04fh.md  mul-0fb3.md  mul-0t0f.md  mul-1v97.md  mul-25la.md  mul-2bti.md  mul-3l0d.md  mul-5doz.md  mul-5zgf.md  mul-6kt3.md  mul-7jmv.md  mul-81cs.md  mul-9un5.md  mul-a809.md  mul-bgl4.md  mul-bxer.md  mul-c2z5.md  mul-d57l.md  mul-dusv.md  mul-ebhb.md  mul-eoqr.md  mul-h82e.md  mul-hc2u.md  mul-hfdn.md  mul-hmnm.md  mul-hvno.md  mul-igbo.md  mul-jcif.md  mul-jlgu.md  mul-lyps.md  mul-maki.md  mul-n0zc.md  mul-otdh.md  mul-ouus.md  mul-r5oy.md  mul-rp16.md  mul-s9qe.md  mul-x8et.md  mul-yxmc.md  mul-zuvk.md  (+17 more)
cli/: Cargo.toml  README.md  deny.toml
cli/assets/: minimal_kernel_clean.py
cli/src/: broker.rs  client.rs  jupyter.rs  kernel.rs  kernelspec.rs  lib.rs  main.rs  mcp.rs  models.rs
cli/supply-chain/: config.toml
cli/tests/: api_client.rs  kernel_lifecycle.rs  pyproject.toml
docs/: 2026-07-22_RUNTIME_API_CLI_HANDOFF.md  AGENT_KERNEL_CATALOG.md  BLOCKED_KERNEL_DEPLOYMENT.md  JUPYTER_NOTEBOOK_REUSABLE.md  JUPYTER_RTC_VS_MULTIREPL.md  JUPYTER_RTC_VS_REPLMUX.md  MULTIREPL_RUNTIME_PRIMITIVE.md  REMOTE_REPLMUX_SERVICE.md  REPLMUX_RUNTIME_PRIMITIVE.md  SNAPSHOT_VS_CHECKPOINT_KERNEL.md
docs/prototype/: AGENTS.md  jupyter_repl_cli.py  shared_repl_socket.py
docs/prototype/test/: lifecycle.py  pyproject.toml
pi/extension/: replTool.ts
scripts/: audit-rust-deps.sh  build-and-test.sh  release.sh
service/: README.md  pyproject.toml
service/multirepl_service/: __init__.py  app.py  models.py  store.py
service/replmux_service/: __init__.py  app.py
service/tests/: test_runtime_api.py
test/: README.md  install-kernels.py  kernels.toml  lifecycle.py  test.sh
tests/jupyter-kernels/: README.md  install-kernels.py  kernels.toml
