[package]
name = "multirepl-runtime-cli"
version = "0.1.0"
edition = "2024"
description = "HTTP CLI for the Multirepl Runtime API"
license = "MIT"

[[bin]]
name = "multirepl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
