[package]
name = "multirepl-runtime-cli"
version = "0.1.0"
edition = "2024"
description = "HTTP CLI for the Multirepl Runtime API"
license = "MIT"

[[bin]]
name = "multirepl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
hmac = "0.12"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zmq = "0.10"
