[project]
name = "replmux-service"
version = "0.1.0"
description = "Runtime metadata API for replmux"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2.7,<3",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
